objects/Informacoes_de_Custo_do_Produto__c.object
<CustomObject>
    <fields>
        <fullName>CM_Case__c</fullName>
        <label>CM Case</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custo_Distribuidor__c</fullName>
        <label>Custo Distribuidor</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custo_LD__c</fullName>
        <label>Custo LD - Caixa real</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Case__c</fullName>
        <label>Net Sales Case</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduler_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduler C</label>
        <referenceTo>Informacoes_do_Produto__c</referenceTo>
        <relationshipLabel>Informações de Custos dos Produtos</relationshipLabel>
        <relationshipName>Informacoes_de_Custos_dos_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Informações de Custo do Produto</label>
    <nameField>
        <displayFormat>ICP-{000000000}</displayFormat>
        <label>Nome da Informações de Custo do Produto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informações de Custos dos Produtos</pluralLabel>
    <recordTypes>
        <fullName>Informacoes_de_Custo_do_Produto</fullName>
        <active>true</active>
        <label>Informações de Custo do Produto</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>